2013-04-13  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: added en-dash and the letter 'o'
	with a tilde. Rearranged some of the lines.

2013-04-07  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/mainWindow.py (BookEntry.helpAbout): Corrected
	spelling of Astronomischer Jahresbericht

2013-03-23  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbol.py (SymbolForm): deleted method
	keyPressedEvent() so window does not disappear it I forget to
	switch back to the main window.

2013-03-19  Jim Fowler  <jrf@Biblion>

	* Tools/BookEntry (main): setFileName and setWinTitle if we open a
	named new file.  This was based on experience trying to start a
	new file with a name passed through the -i flag.

	* Tools/bookentry/mainWindow.py (BookEntry.saveEntry): added
	EntrySelect window to insertButton actions.

2013-03-18  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/entryselect.py (EntrySelect): began work on
	EntrySelect window.  Trouble with highlighting and unhighlighting.
	Solved highlighting problem.

2013-03-17  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/AJBentry.py (AJBentry.shortTitle): added
	shortTitle() method.

2013-03-16  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/mainWindow.py: worked out method for
	default symbols.txt file.
	(BookEntry.deleteEntry): added function for Delete Button
	(BookEntry.insertEntry): added initial function for Insert Button

	* Tools/bookentry/*.py: cleaned up import calls

	* Tools/setup.py: modified system to support both an installed
	environment and a development environment.

2013-03-14  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py (getargs): split BookEntry.py into
	mainWindow.py and BookEntry which is now a script that just
	runs the main program.  The gui is now in mainWindow.py.

2013-03-13  Jim Fowler  <jrf@Biblion>

	* Tools/setup.py: added setup.py and began defining installation
	process.

	* Tools/src/BookEntry.py (BookEntry.openSymbol): added '-s' flag