@@ -1,3 +1,9 @@
+2013-04-14  Jim Fowler  <jrf@Biblion>
+
+	* Tools/bookentry/mainWindow.py (BookEntry.setMaxEntryNumber):
+	added function to set and display the maxEntryNumber.  I was doing
+	this inconsistently in the program.
+
 2013-04-13  Jim Fowler  <jrf@Biblion>
 
 	* Tools/bookentry/symbols.txt: added en-dash and the letter 'o'
